--- a/views/lending.jade
+++ b/views/lending.jade
@@ -3,16 +3,14 @@ extends layout
 block content
 
   header 
-    h2 회원관리 페이지
+    h2 대출반납 관리 페이지
   
     ul
       li
-        a(href="members/serch") 회원검색
+        a(href="lendings/register") 대출반납등록
       li
-        a(href="members/register") 회원등록  
+        a(href="lendings/return") 대출반납현황
       li
-        a(href="members/modify") 회원수정
+        a(href="lendings/current") 도서대출현황
       li
-        a(href="members/delete") 회원삭제
-      li
-        a(href="members/overdue") 연체회원 관리 
+        a(href="lendings/holiday") 휴관일 관리
