--- a/views/lending_current.jade
+++ b/views/lending_current.jade
@@ -3,23 +3,12 @@ extends layout
 block content
 
   header
-    h2 Member Serch
+    h2 Lending Current
   
   section
     acticle
-      form(method="post")
-        div
-          label(for="Serch") 이용자 검색
-          input(name="Serch" type="text" placeholder="검색하세요.")
-        button(type="submit" name="button") 검색
+      h2 현재 대출중인 도서
+          
     article
       div
         table
-          - name.forEach((user) => {
-              tr
-                td=user.name 
-                td=user.id
-                td=user.email
-                td=user.phone_num 
-          - });
-        
