--- a/views/members_serch.jade
+++ b/views/members_serch.jade
@@ -9,7 +9,7 @@ block content
     acticle
       form(method="post")
         div
-          label(for="Serch") 이용자 검색
+          label(for="Serch") 도서 검색
           input(name="Serch" type="text" placeholder="검색하세요.")
         button(type="submit" name="button") 검색
     article
@@ -21,5 +21,5 @@ block content
               td #{user.NAME}
               td #{user.SEC_E_MAIL}
               td #{user.DIRECT_PHONE1} #{user.DIRECT_PHONE2} #{user.DIRECT_PHONE3}
-            -}
+          -}
         
