--- a/views/user_delete.jade
+++ b/views/user_delete.jade
@@ -3,11 +3,11 @@ extends layout
 block content
 
   header
-    h2 Member Delete
+    h2 Administer Delete
   
   section
     acticle
       form(method="post")
-        label(for="ID") 이용자 삭제 (아이디)
+        label(for="ID") 관리자 삭제 (아이디)
         input(name="ID" type="text" placeholder="검색하세요.")
-        button(type="submit" name="button") 삭제
+      button(type="submit" name="button") 삭제
