--- a/views/book.jade
+++ b/views/book.jade
@@ -3,16 +3,14 @@ extends layout
 block content
 
   header 
-    h2 회원관리 페이지
+    h2 자료관리 페이지
   
     ul
       li
-        a(href="members/serch") 회원검색
+        a(href="books/serch") 자료검색
       li
-        a(href="members/register") 회원등록  
+        a(href="books/register") 자료등록  
       li
-        a(href="members/modify") 회원수정
+        a(href="books/modify") 자료수정
       li
-        a(href="members/delete") 회원삭제
-      li
-        a(href="members/overdue") 연체회원 관리 
+        a(href="books/delete") 자료삭제
