--- a/views/book_delete.jade
+++ b/views/book_delete.jade
@@ -3,23 +3,15 @@ extends layout
 block content
 
   header
-    h2 Member Serch
+    h2 Book delete
   
   section
     acticle
       form(method="post")
         div
-          label(for="Serch") 이용자 검색
+          label(for="Serch") 도서 자료 삭제
           input(name="Serch" type="text" placeholder="검색하세요.")
-        button(type="submit" name="button") 검색
+        button(type="submit" name="button") 삭제
     article
       div
         table
-          - name.forEach((user) => {
-              tr
-                td=user.name 
-                td=user.id
-                td=user.email
-                td=user.phone_num 
-          - });
-        
