--- a/views/book_serch.jade
+++ b/views/book_serch.jade
@@ -3,23 +3,25 @@ extends layout
 block content
 
   header
-    h2 Member Serch
+    h2 Book Serch
   
   section
     acticle
       form(method="post")
         div
-          label(for="Serch") 이용자 검색
+          label(for="Serch") 도서 자료 검색
           input(name="Serch" type="text" placeholder="검색하세요.")
         button(type="submit" name="button") 검색
     article
       div
         table
-          - name.forEach((user) => {
-              tr
-                td=user.name 
-                td=user.id
-                td=user.email
-                td=user.phone_num 
-          - });
+          -for(i=0;i<data.length;i++) { user = data[i];
+            tr
+              td #{user.RECORD_ID}
+              td #{user.ISBN_CODE}
+              td #{user.AUTHOR_ID}
+              td #{user.TITLE_OF_BOOK}
+              
+          -}
+    
         
