--- a/views/index.jade
+++ b/views/index.jade
@@ -10,6 +10,8 @@ block content
   nav
     ul
       li
+        a(href="users") 관리자 관리
+      li
         a(href="members") 회원 관리
       li
         a(href="books") 자료 관리
