--- a/views/member_register.jade
+++ b/views/member_register.jade
@@ -8,75 +8,33 @@ block content
   section
     acticle
       form(method="post")
-        label(for="id") 아이디 
-        input(name="id" type="text" placeholder="id")
-        label(for="passwd") 비밀번호 
-        input(name="passwd" type="text" placeholder="passwd")
-        label(for="kor_name") 한국이름
-        input(name="kor_name" type="text" placeholder="id")
-        label(for="eng_name") 영어이름 
-        input(name="eng_name" type="text" placeholder="id")
-        label(for="residence_id") 주민등록번호 
-        input(name="residence_id" type="text" placeholder="id")
-        label(for="birthday") 생년월일 
-        input(name="birthday" type="text" placeholder="id")
-        label(for="solar_lunar") 음력/양력 
-        input(name="solar_lunar" type="text" placeholder="id")
-        label(for="sex") 성별 
-        input(name="sex" type="text" placeholder="id")
-        label(for="marriage") 기혼/미혼 
-        input(name="marriage" type="text" placeholder="id")
-        label(for="home_num_1_1") 집 전화번호
-        input(name="home_num1_1" type="text" placeholder="010")
-        input(name="home_num_1_2" type="text" placeholder="0000")
-        input(name="honme_num_1_3" type="text" placeholder="0000")
-        label(for="home_num_2_1") 집 전화번호2 
-        input(name="home_num_2_1" type="text" placeholder="010")
-        input(name="home_num_2_2" type="text" placeholder="0000")
-        input(name="home_num2_3" type="text" placeholder="0000")
-        label(for="phone_num") 휴대폰 번호 
-        input(name="phone_num1" type="text" placeholder="010")
-        input(name="phone_num2" type="text" placeholder="0000")
-        input(name="phone_num3" type="text" placeholder="0000")
-        label(for="zip_code") 우편번호 
-        input(name="zip_code" type="text" placeholder="id")
-        label(for="home_address") 집주소
-        input(name="home_address" type="text" placeholder="도로명 주소")
-        input(name="home_address_d" type="text" placeholder="세부주소 (동,호수)")
-        label(for="email") 이메일 
-        input(name="email" type="text" placeholder="abc@abc.com")
-        label(for="final_scholarship") 최종학력
-        input(name="final_scholarship" type="text" placeholder="id")
-        label(for="degree_scholarship") 장학 수혜내역
-        input(name="degree_sholarship" type="text" placeholder="id")
-        label(for="gradation_date") 졸업일  
-        input(name="gradation_date" type="text" placeholder="id")
-        label(for="school_name") 학교 이름
-        input(name="school_name" type="text" placeholder="id")
-        label(for="academic_degree") 학위 
-        input(name="academic_degree" type="text" placeholder="id")
-        label(for="work") 일
-        input(name="work" type="text" placeholder="id")
-        label(for="work_name") 부서
-        input(name="work_name" type="text" placeholder="id")
-        label(for="work_duty") 업무 
-        input(name="work_duty" type="text" placeholder="id")
-        label(for="work_num_1") 업무용 전화번호
-        input(name="work_num_1" type="text" placeholder="010")
-        input(name="work_num_2" type="text" placeholder="0000")
-        input(name="work_num_3" type="text" placeholder="0000")
-        label(for="work_num_ext") 내선 전화번호 
-        input(name="work_num_ext" type="text" placeholder="0000")
-        label(for="direct_num_1") 직통 전화번호
-        input(name="direct_num_1" type="text" placeholder="010")
-        input(name="direct_num_2" type="text" placeholder="0000")
-        input(name="direct_num_3" type="text" placeholder="0000")
-        label(for="work_zipcode") 직장 우편번호
-        input(name="work_zipcode" type="text" placeholder="id")
-        label(for="work_address") 직장 주소
-        input(name="work_address" type="text" placeholder="도로명 주소")
-        input(name="work_address_d" type="text" placeholder="세부주소 (동,호수)")
+        label(for="LIBRARY_ID") 아이디 
+        input(name="LIBRARY_ID" type="text" placeholder="id")
+        label(for="SEC_PASSWORD") 비밀번호 
+        input(name="SEC_PASSWORD" type="text" placeholder="pw")
+        label(for="NAME") 이름 
+        input(name="NAME" type="text" placeholder="name")
+        label(for="SEC_E_MAIL")  
+        input(name="SEC_E_MAIL" type="text" placeholder="email")
+        label(for="SEC_MOBILE_PHONE1") 휴대폰 번호 
+        input(name="SEC_MOBILE_PHONE1" type="text" placeholder="010")
+        input(name="SEC_MOBILE_PHONE2" type="text" placeholder="0000")
+        input(name="SEC_MOBILE_PHONE3" type="text" placeholder="0000")
+        label(for="MEMBERSHIP_FLAG") 멤버쉽 플래그
+        input(name="MEMBERSHIP_FLAG" type="text" placeholder="membership flag")
+        label(for="MEMBERSHIP_GROUP")  멤버쉽 그룹
+        input(name="MEMBERSHIP_GROUP" type="text" placeholder="membership_group")
+        label(for="MEMBERSHIP_LENDWEEK") 멤버쉽 대출 기간 
+        input(name="MEMBERSHIP_LENDWEEK" type="text" placeholder="membership lendweek")
+        label(for="REMARK") 주석 
+        input(name="REMARK" type="text" placeholder="remark")
+        label(for="MEMBERSHIP_DELAY") 멤버쉽 지연일 
+        input(name="MEMBERSHIP_DELAY" type="text" placeholder="membership delay")
+        label(for="DELETE_FLAG") 딜리트 플래그 
+        input(name="DELETE_FLAG" type="text" placeholder="delete_flag")
+        label(for="FAMILY") 가족 
+        input(name="FAMILY" type="text" placeholder="family")    
         button(type="submit" name="button") 등록 
-    article
+        article
       div
       
