--- a/views/book_register.jade
+++ b/views/book_register.jade
@@ -8,64 +8,90 @@ block content
   section
     acticle
       form(method="post")
-        label(for="RECORD_ID") 자료 id
+        label(for="RECORD_ID") *자료 id
         input(name="RECORD_ID" type="record id" placeholder="id")
-        label(for="ISBN_CODE") ISBN 코드
+        br
+        label(for="ISBN_CODE") *ISBN 코드
         input(name="ISBN_CODE" type="text" placeholder="isbn")
+        br
         label(for="EXTRA_CODE") 추가 코드 
         input(name="EXTRA_CODE" type="text" placeholder="extra code")
+        br
         label(for="CLASS_ID") class id
         input(name="CLASS_ID" type="text" placeholder="class id")
-        label(for="WRITER_NAME1") 작가 이름  
+        br
+        label(for="WRITER_NAME1") *작가 이름  
         input(name="WRITER_NAME1" type="text" placeholder="writer 1")
-        label(for="AUTHOR_NAME1") 저자 이름  
+        label(for="AUTHOR_NAME1") *저자 이름  
         input(name="AUTHOR_NAME1" type="text" placeholder="author 1")
+        br
         label(for="WRITER_NAME2") 작가 이름  
         input(name="WRITER_NAME2" type="text" placeholder="writer 2")
         label(for="AUTHOR_NAME2") 저자 이름  
         input(name="AUTHOR_NAME2" type="text" placeholder="author 2")
+        br
         label(for="WRITER_NAME3") 작가 이름  
         input(name="WRITER_NAME3" type="text" placeholder="writer 3")
         label(for="AUTHOR_NAME3") 저자 이름  
         input(name="AUTHOR_NAME3" type="text" placeholder="author 3")
+        br
         label(for="TRANSLATOR_NAME") 옮긴 이   
         input(name="TRANSLATOR_NAME" type="text" placeholder="translator1")
+        br
         label(for="TRANSLATOR_NAME2") 옮긴 이   
         input(name="TRANSLATOR_NAME2" type="text" placeholder="translator2")
-        label(for="TITLE_OF_BOOK") 책 이름
+        br
+        label(for="TITLE_OF_BOOK") *책 이름
         input(name="TITLE_OF_BOOK" type="text" placeholder="title of book")
+        br
         label(for="ORIGINAL_TITLE")  책 원어이름
         input(name="ORIGINAL_TITLE" type="text" placeholder="original title")
+        br
         label(for="ENGLiSH_TITLE")  책 영어이름 
         input(name="ENGLISH_TITLE" type="text" placeholder="english title")
+        br
         label(for="SECONDARY_TITLE")  부제목
         input(name="SECONDARY_TITLE" type="text" placeholder="secondary title")
+        br
         label(for="SERIES_TITLE")  시리즈 이름 
         input(name="SERIES_TITLE" type="text" placeholder="series title")
+        br
         label(for="ISSUE_COUNT")  발간 호 수
         input(name="ISSUE COUNT" type="text" placeholder="issue count")
+        br
         label(for="ISSUE_NATION")  발간 국가 
         input(name="ISSUE_NATION" type="text" placeholder="issue nation")
+        br
         label(for="ISSUE_COMPANY")  발간 회사 
         input(name="ISSUE_COMPANY" type="text" placeholder="issue company")
+        br
         label(for="TOTAL_PAGE")  페이지 수 
         input(name="TOTAL_PAGE" type="text" placeholder="total page")
+        br
         label(for="ILLUSTRATION")  일러스트 
         input(name="ILLUSTRATION" type="text" placeholder="illustration")
+        br
         label(for="BOOK_SIZE")  책 크기  
         input(name="BOOK_SIZE" type="text" placeholder="book size")
+        br
         label(for="BOOK_PRICE")  책 가격
         input(name="BOOK_PRICE" type="text" placeholder="book price")
+        br
         label(for="THEME_WORD1")  주제어 
         input(name="THEME_WORD1" type="text" placeholder="theme word")
+        br
         label(for="THEME_WORD2")  주제어 
         input(name="THEME_WORD2" type="text" placeholder="theme word")
+        br
         label(for="THEME_WORD3")  주제어 
         input(name="THEME_WORD3" type="text" placeholder="theme word")
+        br
         label(for="THEME_WORD4")  주제어 
         input(name="THEME_WORD4" type="text" placeholder="theme word")
+        br
         label(for="THEME_WORD5")  주제어 
         input(name="THEME_WORD5" type="text" placeholder="theme word")
+        br
         button(type="submit" name="button") 등록 
     article
       div
