--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css")
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block content
