--- a/views/lending.jade
+++ b/views/lending.jade
@@ -7,10 +7,12 @@ block content
   
     ul
       li
-        a(href="lendings/register") 대출반납등록
+        a(href="lendings/register") 대출등록
       li
-        a(href="lendings/return") 대출반납현황
+        a(href="lendings/return") 반납등록 
       li
-        a(href="lendings/current") 도서대출현황
+        a(href="lendings/current") 현재 대출중인 목록
+      li
+        a(href="lendings/recent") 대출반납 목록
       li
         a(href="lendings/holiday") 휴관일 관리
