--- a/views/lending_register.jade
+++ b/views/lending_register.jade
@@ -12,7 +12,7 @@ block content
         div
           label(for="LIBRARY_ID") 회원 id
           input(name="LIBRARY_ID" type="text" placeholder="member id")
-          label(for="RECORD_ID") 회원 id
+          label(for="RECORD_ID") 자료 id
           input(name="RECORD_ID" type="text" placeholder="record id")
         button(type="submit" name="button") 대출 
     article
