--- a/views/lending_holiday.jade
+++ b/views/lending_holiday.jade
@@ -9,8 +9,9 @@ block content
     acticle
       form(method="post")
         div
-          label(for="Serch") 휴관일 설정 
-          input(name="Serch" type="date" placeholder="설정하세요.")
+          label(for="date") 휴관일 설정 
+          input(name="remark" type="text" placeholder="무슨 날인가요?")
+          input(name="date" type="date" placeholder="설정하세요.")
         button(type="submit" name="button") 설정 
     article
       div
