--- a/views/members_index.jade
+++ b/views/members_index.jade
@@ -13,3 +13,17 @@ block content
     ul
       li
         a(href="book_serch") 도서관 자료 검색
+        
+  section
+    article
+      div
+        h2 현재 대출중인 도서
+        table
+          th
+            td 번호
+            td 제목
+          -for(i=0;i<data.length;i++) { user = data[i];
+            tr
+              td #{i+1}.
+              td #{user}
+          -}
