--- a/views/user_register.jade
+++ b/views/user_register.jade
@@ -8,77 +8,106 @@ block content
   section
     acticle
       form(method="post")
-        label(for="id") 아이디 
+        label(for="id") *아이디 (8글자 이하) 
         input(name="id" type="text" placeholder="id")
-        label(for="passwd") 비밀번호 
+        br
+        label(for="passwd") *비밀번호 
         input(name="passwd" type="text" placeholder="passwd")
-        label(for="kor_name") 한국이름
+        br
+        label(for="kor_name") *한국이름
         input(name="kor_name" type="text" placeholder="id")
+        br
         label(for="eng_name") 영어이름 
         input(name="eng_name" type="text" placeholder="id")
-        label(for="residence_id") 주민등록번호 
+        br
+        label(for="residence_id") *주민등록번호 
         input(name="residence_id" type="text" placeholder="id")
-        label(for="birthday") 생년월일 
+        br
+        label(for="birthday") *생년월일 
         input(name="birthday" type="text" placeholder="id")
+        br
         label(for="solar_lunar") 음력/양력 
         input(name="solar_lunar" type="text" placeholder="id")
-        label(for="sex") 성별 
+        br
+        label(for="sex") *성별 
         input(name="sex" type="text" placeholder="id")
+        br
         label(for="marriage") 기혼/미혼 
         input(name="marriage" type="text" placeholder="id")
-        label(for="home_num_1_1") 집 전화번호
+        br
+        label(for="home_num_1_1") *집 전화번호
         input(name="home_num1_1" type="text" placeholder="010")
         input(name="home_num_1_2" type="text" placeholder="0000")
         input(name="honme_num_1_3" type="text" placeholder="0000")
+        br
         label(for="home_num_2_1") 집 전화번호2 
         input(name="home_num_2_1" type="text" placeholder="010")
         input(name="home_num_2_2" type="text" placeholder="0000")
         input(name="home_num2_3" type="text" placeholder="0000")
-        label(for="phone_num_1") 휴대폰 번호 
+        br
+        label(for="phone_num_1") *휴대폰 번호 
         input(name="phone_num_1" type="text" placeholder="010")
         input(name="phone_num_2" type="text" placeholder="0000")
         input(name="phone_num_3" type="text" placeholder="0000")
-        label(for="zip_code") 우편번호 
+        br
+        label(for="zip_code") *우편번호 
         input(name="zip_code" type="text" placeholder="id")
-        label(for="home_address") 집주소
+        br
+        label(for="home_address") *집주소
         input(name="home_address" type="text" placeholder="도로명 주소")
         input(name="home_address_d" type="text" placeholder="세부주소 (동,호수)")
-        label(for="email") 이메일 
+        br
+        label(for="email") *이메일 
         input(name="email" type="text" placeholder="abc@abc.com")
+        br
         label(for="final_scholarship") 최종학력
         input(name="final_scholarship" type="text" placeholder="id")
+        br
         label(for="degree_scholarship") 장학 수혜내역
         input(name="degree_sholarship" type="text" placeholder="id")
+        br
         label(for="gradation_date") 졸업일  
         input(name="gradation_date" type="text" placeholder="id")
+        br
         label(for="school_name") 학교 이름
         input(name="school_name" type="text" placeholder="id")
+        br
         label(for="academic_degree") 학위 
         input(name="academic_degree" type="text" placeholder="id")
+        br
         label(for="work") 일
         input(name="work" type="text" placeholder="id")
+        br
         label(for="work_name") 부서
         input(name="work_name" type="text" placeholder="id")
+        br
         label(for="work_duty") 업무 
         input(name="work_duty" type="text" placeholder="id")
+        br
         label(for="work_num_1") 업무용 전화번호
         input(name="work_num_1" type="text" placeholder="010")
         input(name="work_num_2" type="text" placeholder="0000")
         input(name="work_num_3" type="text" placeholder="0000")
+        br
         label(for="work_num_ext") 내선 전화번호 
         input(name="work_num_ext" type="text" placeholder="0000")
+        br
         label(for="direct_num_1") 직통 전화번호
         input(name="direct_num_1" type="text" placeholder="010")
         input(name="direct_num_2" type="text" placeholder="0000")
         input(name="direct_num_3" type="text" placeholder="0000")
+        br
         label(for="direct_num_ext")
         input(name="direct_num_ext" type="text" placeholder="0000")
+        br
         label(for="work_zipcode") 직장 우편번호
         input(name="work_zipcode" type="text" placeholder="id")
+        br
         label(for="work_address") 직장 주소
         input(name="work_address" type="text" placeholder="도로명 주소")
         input(name="work_address_d" type="text" placeholder="세부주소 (동,호수)")
-        button(type="submit" name="button") 등록 
+        br
+        button(type="submit" name="button") 관리자 등록
     article
       div
       
